2003-05-09  Matti Aarnio  <mea@zmailer.org>

	* proto/cf/fqdnalias.cf, proto/cf/aliases.cf, router/functions.c:
	    Correcting a bit of the 'listexpand'  treatment of DSN data
	    in expanded addresses.  When expanding thru LISTS, new ORCPT
	    (and new Return-Path) will result.on each recipient address,
	    but when expanding thru ALIASES (and .forward), ORCPT and
	    Return-Path will stay unmodified.
	    Disabled former (now unused)  "listaddresses"  function,
	    which does a small part of the job...

	* scheduler/scheduler.c:
	    Andrey Blochintsev reported typo in  setproctitle()
	    call.  (***BSD specific thing.)

	* proto/zmailer.sh.in:
	    Eino Tuominen spotted that I still have sloppy style to
	    write scripts without testing them before publishing..
	    ( e.g. users test :-/ )  Missing double-quote in one
	    sh embedded perl script.

	* proto/cf/fqdnalias.cf:
	    Modification typo lurked in the FQDN aliasing script.
	    OUTCH!  Found it when testing local virtualized email
	    service failing to failure, and producing 'deferred'
	    messages...

	* lib/sleepycatdb.c, smtpserver/policytest.c, utils/makedb/dblook.c,
	  utils/makedb/makedb.c:
	    Support compiling against SleepyCat DB 4.1
	    (the C-API has again been changed;  db->open()  got additional
	     parameters...)

2003-05-08  Matti Aarnio  <mea@zmailer.org>

	* libsh/builtins.c:
	    Debugging  sh_read()'s internal buffer re-allocation/extension
	    code.  Something is wrong in there, and it grows without bounds..

	* include/listutils.h, libsh/listmalloc.c, router/db.c:
	    "function with parameter that is a pointer to a function with ..."
	    .. found correct thing.  I wish gcc would tell as much as
	    the Sun WorkShop C compiler tells...

	* configure.in, include/zresolv.h:
	    Solaris 2.6 oops.. u_int16_t isn't known type there..

	* transports/sm/sm.c, transports/mailbox/mailbox.c,
	  router/daemonsub.c, scheduler/transport.c,