@@ -1,5 +1,9 @@
 2003-05-09  Matti Aarnio  <mea@zmailer.org>
 
+	* libsh/io.h, libsh/io.h, libsh/builtins.c:
+	    While trying to implement a sh_read(), which is least
+	    incomprehensible code, had to introduce fgetc() redirecting.
+
 	* proto/cf/fqdnalias.cf, proto/cf/aliases.cf, router/functions.c:
 	    Correcting a bit of the 'listexpand'  treatment of DSN data
 	    in expanded addresses.  When expanding thru LISTS, new ORCPT
